Ensure all tabs in sidebar are hidden when the sidebar is collapsed.

--- a/src/App/SidebarLogic.css
+++ b/src/App/SidebarLogic.css
@@ -52,6 +52,9 @@
     }
   }
 
+  /**
+  * when the sidebar is collapsed, the tabs inside it are hidden
+  */
   &:has( > menu > label[for=sidebarPin] > input#sidebarPin[type=checkbox]:not( :checked ) ) {
 
     width: 24px;
@@ -66,8 +69,8 @@
       border-bottom-style: none;
     }*/
   }
-
-  > div {
+  
+  &:has( > menu > label[for=sidebarPin] > input#sidebarPin[type=checkbox]:checked ) > div {
     
     /**
     *
